# afk

./: .gitignore  CLAUDE.md  pyproject.toml  review.md
.bmad/_cfg/: files-manifest.csv  manifest.yaml  workflow-manifest.csv
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.claude/commands/: review-adversarial.md
.claude/hooks/: audio-summary.py
.claude/output-styles/: tts-summary.md
_bmad/_config/: files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
afk/: __init__.py  driver.py  executor.py  git.py  session.py  transition_type.py  turn.py  turn_log.py  turn_result.py
docs/: architecture.md  bmm-workflow-status.yaml  domain-model.md  epic-1-action-items.md  epic-2-action-items.md  epics.md  implementation-readiness-report-2025-12-09.md  prd.md  project-context.md  project_context.md  sprint-change-proposal-2025-12-10.md  sprint-change-proposal-2025-12-16.md  version-control-rules.md
docs/analysis/: product-brief-afk-2025-12-09.md
docs/archive/: implementation-readiness-report-2025-12-09.md
docs/research/: pty-vs-script-investigation.md
docs/sprint-artifacts/: 1-1-git-operations-foundation.md  1-2-driver-execute-prompt-via-script-wrapper.md  1-3-commit-detection-and-result-extraction.md  1-4-exception-handling-for-prompt-execution.md  2-1-turn-data-structure.md  2-2-session-tracking.md  2-3-turn-based-logging.md  (+6 more)
examples/: tracer_bullet.py
tests/: test_driver.py  test_executor.py  test_git.py  test_session.py  test_transition_type.py  test_turn.py  test_turn_log.py  test_turn_result.py
(+43 files in other folders)
