[project]
name = "afk"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9,<10", "ruff>=0.14,<1", "pyright>=1.1,<2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# Terse output for LLM consumption: only failures + summary
addopts = "-q --tb=short"

[tool.pyright]
typeCheckingMode = "strict"
# Production code only - tests need flexibility for mocks and private access
include = ["afk"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
# Run with: uv run pyright --threads
